# smart-cycling-computers

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  isfile_res.sh  main.cpp  qml.qrc  res.qrc
.qt/: QtDeploySupport.cmake
.qt/deploy_qml_imports/: scc_app.cmake
.qt_plugins/: Qt6_QmlPlugins_Imports_scc-app.rsp
docs/: intro.md
src/: main.cpp
src/network/: httputils.cpp  httputils.h
src/notes/: NotesManager.cpp  NotesManager.h
src/others/: taskMap.html
src/qml/: Style.qml  main.qml
src/qml/AI/: AIAssistant.qml  ActionButton.qml
src/qml/Base/: Footer.qml  Header.qml  Icon.qml  IconButton.qml  ItemHeader.qml  LaunchPadControl.qml  LauncherButton.qml  StepperControl.qml  TopLeftButtonIconColumn.qml  TopLeftControl.qml  TopMiddleControl.qml  TopRightControl.qml
src/qml/Connectivity/: BlueWifi.qml
src/qml/Media/: Camera.qml  Gallery.qml
src/qml/Music/: AppSystemTrayIcon.qml  Background.qml  DetailFavoritePageView.qml  DetailHistoryPageView.qml  DetailLocalPageView.qml  DetailPlayListPageView.qml  DetailRecommendPageView.qml  DetailSearchPageView.qml  LayoutBottomView.qml  LayoutHeaderView.qml  MusicBannerView.qml  MusicBorderImage.qml  MusicGridHotView.qml  MusicGridLatestView.qml  MusicIconButton.qml  MusicListView.qml  MusicLoading.qml  MusicLyricView.qml  MusicNotification.qml  MusicPlayerWindow.qml  MusicRoundImage.qml  MusicTextButton.qml  MusicToolButton.qml  MusicToolTip.qml  PageDetailView.qml  PageHomeView.qml
src/qml/Notes/: NotesWindow.qml
src/qml/Settings/: Style.qml
src/speechRecognizer/: SpeechRecognizer.cpp  SpeechRecognizer.h
(+2 files in other folders)
